hphp/test/zend/bad/tests/classes/type_hinting_005b.php
<?php
Class C { function f(array $a) {} }

echo "No hint, should be array.\n";
Class D extends C { function f($a) {} }
?>
==DONE==